<resources>
    <string name="app_name">Survey Application</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logout">Logout</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="list">List</string>
    <string name="home">Home</string>
    <string name="personal_information">Personal Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="date_of_birth">Date of Birth :</string>
    <string name="select_date">Select date</string>
    <string name="bloodgroup">BloodGroup</string>
    <string name="citizenship_number">Citizenship Number</string>
    <string name="address">Address</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="temporary_address">Temporary Address</string>
    <string name="house_number">House Number</string>
    <string name="ward_number">Ward Number</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="landline">Landline</string>
    <string name="contact">Contact</string>
    <string name="qualification">Qualification</string>
    <string name="occupation">Occupation</string>
    <string name="income">Annual Income</string>
    <string name="education">Education</string>
    <string name="family_background">Family Background</string>
    <string name="father_s_name">Father\'s name</string>
    <string name="mother_s_name">Mother\'s name</string>
    <string name="relation_status">Relation Status</string>
    <string name="unmarried">Unmarried</string>
    <string name="married">Married</string>
    <string name="religion">Religion</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="user_info">User Info</string>
    <string name="name">Name</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="save">Save</string>
    <string name="relationship">Relationship</string>
    <string name="delete">Delete</string>
    <string name="gender1">Gender</string>
    <string name="date_of_birth1">Date of Birth</string>
    <string name="submit">Submit</string>
</resources>