<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login.LoginActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="324sp"
        android:layout_height="656sp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingTop="30sp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="140sp"
            android:layout_height="143sp"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:paddingTop="30sp"
            android:src="@drawable/user"
            tools:layout_editor_absoluteX="131sp"
            tools:layout_editor_absoluteY="70sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:text="@string/sign_in_to_continue"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary">

            <!--EditText : Input Email-->

            <EditText
                android:id="@+id/tv_username"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="30sp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTIL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            app:passwordToggleEnabled="true">

            <!--EditText : Input Passowrd-->

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="40sp"
                android:layout_marginTop="10sp"
                android:fontFamily="sans-serif-light"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:focusable="true"
            android:onClick="forgotpassword"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlHardcoded" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/remember_me"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/login"
            android:layout_width="124dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:background="@drawable/rounded_button"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>