<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BottomNavigation.Survey.PersonalInfoActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomnavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        app:itemIconTint="@drawable/selector"
        app:itemTextColor="@drawable/selector"
        app:menu="@menu/nav_menu" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="always"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="25sp"
            android:paddingTop="25sp"
            android:paddingRight="25sp"
            android:paddingBottom="75sp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100sp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/todo"
                app:srcCompat="@drawable/app_logo" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:text="@string/personal_information"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:ems="10"
                    android:hint="@string/first_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_lastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:hint="@string/last_name"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5sp"
                    android:layout_marginEnd="5sp"
                    android:layout_marginRight="5sp"
                    android:text="@string/gender"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/rg_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="30sp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_male"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="checkButton"
                        android:text="@string/male"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/rb_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="checkButton"
                        android:text="@string/female"
                        android:textColor="@color/colorPrimary" />

                    <RadioButton
                        android:id="@+id/rbother"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="checkButton"
                        android:text="@string/other"
                        android:textColor="@color/colorPrimary" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="15sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_dateofbirth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5sp"
                    android:layout_marginRight="5sp"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/tv_dob"
                    android:layout_width="124dp"
                    android:layout_height="30dp"
                    android:background="@drawable/rounded_button"
                    android:text="@string/select_date"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Bloodgroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_bloodgroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:hint="@string/bloodgroup"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/citizen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_citizen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:hint="@string/citizenship_number"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:text="@string/address"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/p_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_permaaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:hint="@string/permanent_address"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/t_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_tempaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:hint="@string/temporary_address"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/houseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_houseno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:hint="@string/house_number"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/wardno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_wardno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:hint="@string/ward_number"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:text="@string/contact"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTIL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:hint="@string/mobile"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/landline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorPrimary">

                <EditText
                    android:id="@+id/et_landline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5sp"
                    android:layout_marginTop="20sp"
                    android:layout_marginRight="5sp"
                    android:layout_marginBottom="5sp"
                    android:hint="@string/landline"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textColor="@color/colorPrimary"
                    tools:ignore="UnknownId" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="5sp"
                android:layout_marginBottom="5sp"
                android:background="@drawable/rounded_button"
                android:text="@string/next"
                android:textColor="@color/colorWhite"
                tools:ignore="UnknownId" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>