<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_profile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            style="@style/headerText"
            android:layout_marginBottom="20dp"
            android:text="@string/user_info"
            android:textColor="@color/colorBlack" />

        <RelativeLayout style="@style/profileDetailsLayout">

            <ImageView
                android:id="@+id/nameImageView"
                style="@style/profileDetailsImage"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_name" />

            <TextView
                style="@style/profileDetailsTextMain"
                android:layout_toEndOf="@id/nameImageView"
                android:layout_toRightOf="@id/nameImageView"
                android:text="@string/name"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tv_username1"
                style="@style/profileDetailsMiniText"
                android:layout_toEndOf="@id/nameImageView"
                android:layout_toRightOf="@id/nameImageView"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <RelativeLayout style="@style/profileDetailsLayout">

            <ImageView
                android:id="@+id/mobileImageView"
                style="@style/profileDetailsImage"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_mobile" />

            <TextView
                style="@style/profileDetailsTextMain"
                android:layout_toEndOf="@id/mobileImageView"
                android:layout_toRightOf="@id/mobileImageView"
                android:text="@string/mobile"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tv_mobile"
                style="@style/profileDetailsMiniText"
                android:layout_toEndOf="@id/mobileImageView"
                android:layout_toRightOf="@id/mobileImageView"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <RelativeLayout style="@style/profileDetailsLayout">

            <ImageView
                android:id="@+id/emailImageView"
                style="@style/profileDetailsImage"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_email" />

            <TextView
                style="@style/profileDetailsTextMain"
                android:layout_toEndOf="@id/emailImageView"
                android:layout_toRightOf="@id/emailImageView"
                android:text="@string/email"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/profileDetailsMiniText"
                android:layout_toEndOf="@id/emailImageView"
                android:layout_toRightOf="@id/emailImageView"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <RelativeLayout
            style="@style/profileDetailsLayout"
            android:layout_marginBottom="75sp">

            <ImageView
                android:id="@+id/addressImageView"
                style="@style/profileDetailsImage"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_address" />

            <TextView
                style="@style/profileDetailsTextMain"
                android:layout_toEndOf="@id/addressImageView"
                android:layout_toRightOf="@id/addressImageView"
                android:text="@string/address"
                android:textColor="@color/colorBlack" />

            <TextView
                android:id="@+id/tv_address"
                style="@style/profileDetailsMiniText"
                android:layout_toEndOf="@id/addressImageView"
                android:layout_toRightOf="@id/addressImageView"
                android:textColor="@color/colorBlack" />

        </RelativeLayout>

        <View style="@style/proifleDetailsView" />

        <View style="@style/proifleDetailsView" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
